Cleaned the project

--- a/DreamIsland/appsettings.json
+++ b/DreamIsland/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DreamIsland-37775AF2-66ED-4EE3-83F4-8625AEA66505;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LEGION\\SQLEXPRESS;Database=DreamIsland;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
