--- a/DreamIsland/DreamIsland.csproj
+++ b/DreamIsland/DreamIsland.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\celebrities\cover\" />
+    <Folder Include="wwwroot\celebrities\gallery\" />
+  </ItemGroup>
+
 </Project>
