--- a/DreamIsland/DreamIsland.csproj
+++ b/DreamIsland/DreamIsland.csproj
@@ -15,11 +15,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\cars\cover\" />
     <Folder Include="wwwroot\celebrities\cover\" />
-    <Folder Include="wwwroot\celebrities\gallery\" />
+    <Folder Include="wwwroot\islands\cover\" />
   </ItemGroup>
 
 </Project>
