--- a/DreamIsland/DreamIsland.csproj
+++ b/DreamIsland/DreamIsland.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\cars\cover\" />
     <Folder Include="wwwroot\celebrities\cover\" />
+    <Folder Include="wwwroot\collectibles\cover\" />
     <Folder Include="wwwroot\islands\cover\" />
   </ItemGroup>
 
