Implemented sending of email confirmation message to user email address

--- a/DreamIsland/appsettings.json
+++ b/DreamIsland/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LEGION\\SQLEXPRESS;Database=DreamIsland;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "SendGrid": {
+    "ApiKey": "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"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
