Deployment to Azure and adding a FAQ section

--- a/DreamIsland/appsettings.json
+++ b/DreamIsland/appsettings.json
@@ -9,5 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=df98aaac-b08d-4c9d-876b-2c5330617c91;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/"
+  },
+  "Azure": {
+    "SignalR": {
+      "Enabled": "true"
+    }
+  }
 }
